# cyclability-mapper

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docker/: compose.yaml
docker/init/: init.sql
docker/postgres/: init.sql
docs/: _index.md  analysis.md  api.md  data_model.md  database.md  frontend.md  index.html  jobs.md  metrics.md  pipeline.md  test_doc.md
docs/maps/: index.html
frontend/figures/: app.py  figures.py
frontend/kepler/: Dockerfile  app.py  kepler_config.json  load_data.py  map.py  server.py
src/: main.py
src/city_metrics/analysis/: base.py  parameters.py  sensitivity.py
src/city_metrics/api/: app.py
src/city_metrics/jobs/: build_network.py  delete_network.py  generate_static_maps.py  list_city_metrics.py  recompute_metrics.py  refresh_osm_data.py  run_graph.py  run_sweep.py
src/city_metrics/metrics/: compute_metrics.py
src/city_metrics/services/: pipeline.py  refresh.py  segments.py
src/city_metrics/validation/: geometry.py
src/cmm/: __init__.py
src/cmm/api/: app.py  deps.py  schemas.py
src/cmm/data/: geojson.py  raw_to_postgres.py
src/cmm/domain/: segment.py
src/cmm/jobs/: build_network.py  delete_network.py  list_cities.py  recompute_metrics.py  (+1 more)
tests/: conftest.py  test_example_function.py
tests/data/: test_cleaning.py  test_export.py  test_geojson.py  test_ingest.py
tests/fixtures/: dev_geojson.geojson
tests/metrics/: test_compute_metrics.py  test_cyclability.py  test_versioning.py
tests/scoring/: test_cyclability.py
tests/utils/: test_geometry.py
(+50 files in other folders)
